data/derived/fa15/progs/unify/prog2595.ml.out
Characters 214-230:
  ( a1 @ [(x1+x2+c) / 10], a2 @ (x1+x2+c) mod 10 )
                                ^^^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
